workflow/11-deploy.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - image: postgres
        name: postgres
        resources:
          limits:
            memory: 512Mi
            cpu: "0.5"
        securityContext:
           runAsUser: 1000
    
---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api
  name: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - image: david13356/node-api-app
        name: api
        resources:
          limits:
            memory: 512Mi
            cpu: "0.5"
        securityContext:
           runAsUser: 1000
           readOnlyRootFilesystem: true
           allowPrivilegeEscalation: false

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web
  name: web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - image: david13356/node-web-app
        name: node-web-app
        resources:
          limits:
            memory: 512Mi
            cpu: "0.5"
        securityContext:
           runAsUser: 1000
           readOnlyRootFilesystem: true
           allowPrivilegeEscalation: false

---
