workflow/13-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: db
  name: db-svc
spec:
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: db

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: api
  name: api-svc
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
    name: http
  selector:
    app: api

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: web
  name: web
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    name: http
  selector:
    app: web
  type: NodePort
